# ChangeLog for dev-perl/Term-ReadLine-Gnu
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Term-ReadLine-Gnu/ChangeLog,v 1.22 2012/02/18 08:54:36 tove Exp $

  18 Feb 2012; Torsten Veller <tove@gentoo.org>
  -Term-ReadLine-Gnu-1.200.0.ebuild:
  Cleanup

  12 Oct 2011; Raúl Porcel <armin76@gentoo.org>
  Term-ReadLine-Gnu-1.200.0-r1.ebuild:
  sparc stable wrt #384501

  01 Oct 2011; Torsten Veller <tove@gentoo.org>
  Term-ReadLine-Gnu-1.200.0-r1.ebuild:
  Stable on x86 (#384501)

  12 Jun 2011; Markus Meier <maekke@gentoo.org>
  Term-ReadLine-Gnu-1.200.0-r1.ebuild:
  add ~arm, bug #369723

  02 Apr 2011; Torsten Veller <tove@gentoo.org> -Term-ReadLine-Gnu-1.19.ebuild:
  Cleanup

  20 Mar 2011; Raúl Porcel <armin76@gentoo.org>
  Term-ReadLine-Gnu-1.200.0.ebuild:
  sparc/x86 stable wrt #358223

*Term-ReadLine-Gnu-1.200.0-r1 (10 Mar 2011)
*Term-ReadLine-Gnu-1.200.0 (10 Mar 2011)

  10 Mar 2011; Torsten Veller <tove@gentoo.org> -Term-ReadLine-Gnu-1.20.ebuild,
  +Term-ReadLine-Gnu-1.200.0.ebuild, +Term-ReadLine-Gnu-1.200.0-r1.ebuild:
  Fix undefined symbols (#355145). Maintenance. EAPI=3 bump. Change version
  scheme

*Term-ReadLine-Gnu-1.20 (02 May 2010)

  02 May 2010; Robin H. Johnson <robbat2@gentoo.org>
  +Term-ReadLine-Gnu-1.20.ebuild:
  Version bump via perl-bump experimental tool.

  06 May 2009; Torsten Veller <tove@gentoo.org>
  -Term-ReadLine-Gnu-1.16.ebuild:
  Cleanup

  04 May 2009; Tiago Cunha <tcunha@gentoo.org>
  Term-ReadLine-Gnu-1.19.ebuild:
  stable sparc, bug 268178

  02 May 2009; Torsten Veller <tove@gentoo.org>
  Term-ReadLine-Gnu-1.19.ebuild:
  Stable on x86 (#268178)

  01 May 2009; Torsten Veller <tove@gentoo.org>
  -Term-ReadLine-Gnu-1.17a.ebuild, -Term-ReadLine-Gnu-1.18.ebuild:
  Cleanup

*Term-ReadLine-Gnu-1.19 (21 Mar 2009)

  21 Mar 2009; Torsten Veller <tove@gentoo.org>
  +Term-ReadLine-Gnu-1.19.ebuild:
  Version bump

*Term-ReadLine-Gnu-1.18 (01 Mar 2009)
