@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Term-ReadLine-Gnu/Term-ReadLine-Gnu-1.200.0-r1.ebuild,v 1.4 2011/10/12 11:07:08 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Term-ReadLine-Gnu/Term-ReadLine-Gnu-1.200.0-r1.ebuild,v 1.5 2012/06/21 19:32:13 ago Exp $
 
 EAPI=3
 
@@ -11,7 +11,7 @@ inherit perl-module
 DESCRIPTION="GNU Readline XS library wrapper"
 
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~ia64 ~ppc sparc x86"
+KEYWORDS="~alpha amd64 ~arm ~ia64 ~ppc sparc x86"
 IUSE=""
 
 DEPEND=">=sys-libs/readline-6.2"
