@@ -1,14 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST common-sense-3.5.tar.gz 12166 RMD160 837a52c8335c66c158f2c3564c4afee305caa4f3 SHA1 9cacf866dd16655cd3951c53bd67803db7bb53f4 SHA256 235d1116092e7ef88bf6e695c605d9ec1c7b530f3544fdb2431dd59a82f5a3be
+DIST common-sense-3.6.tar.gz 12594 RMD160 6274f881b2abf3731b10744e16d261430a61cb85 SHA1 5be4f69ea11d4b334f0f4250ab1178bd02b51f1d SHA256 86e2c2e109a7dd4bc5441757e729d7d622da125c6e14607a78fb56e057b86b5a
 EBUILD common-sense-3.500.0.ebuild 457 RMD160 b6530dbce93e2a841c588b35b31bf2c45dd6c9f7 SHA1 e7f8443bab16475862295e1f0d24da046c335480 SHA256 b81576b2f3c15d8c2603b2656ee76482259a3466ff12d26d8ba9b954119c544b
-MISC ChangeLog 3087 RMD160 f4788751745ddacab665d59c3cd24bb63c542f03 SHA1 5e860e91fe3128b61fd879ba86bd2f3cbcd71fc3 SHA256 d85bde805099e00ecacb9bffa8671e6427cadb2cbb44a80d0b2e0a55f19287ff
+EBUILD common-sense-3.600.0.ebuild 453 RMD160 c6f22d607ade0c5a1715a2453bdc4f7395411bbb SHA1 bd279dc7e0659e8cd570716eda101027806c82b6 SHA256 d09bb04dce1b6203554bff68318938338564e96f7c83c7360911d91db0aac642
+MISC ChangeLog 3212 RMD160 b82a851600f62c66884d684bc26cac04abf813e0 SHA1 0afad597dc8bdc45450fd802f9035ee2327ae760 SHA256 53f4911a2f8afba7f4b54903e9d736cb99779fc0efe5eb1974eb934ac0b9a69c
 MISC metadata.xml 307 RMD160 91c8857811eda4cd99084c52942f3c2068b41d1e SHA1 423a275499808cec5926c838cefe90c38c93b91a SHA256 cb2d7d7c61723212e48c816e0bc37671c54d6a1cd58acb16a04dd8f10dd76275
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEUEAREKAAYFAk+6DgMACgkQuUQtlDBCeQJZAACfbZqyiLt+Xj0upgRkE1Mc7WYD
-a5cAmN9mi8SB5K4HGxsoXBXqhVX/VZM=
-=cXU6
+iEYEAREIAAYFAk/jauUACgkQV3J2n04EauwhNgCgm3LhCzSHe7jxZX6pse2fGD0Y
+pKAAoMXubsKcu9TQNwvTl/5MFhGLA4N5
+=J4sa
 -----END PGP SIGNATURE-----
