@@ -1,0 +1,15 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/common-sense/common-sense-3.600.0.ebuild,v 1.1 2012/06/21 18:41:36 tove Exp $
+
+EAPI=4
+
+MODULE_AUTHOR=MLEHMANN
+MODULE_VERSION=3.6
+inherit perl-module
+
+DESCRIPTION="common::sense - save a tree AND a kitten, use common::sense!"
+
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~sparc ~x86 ~x64-macos ~x86-solaris"
+IUSE=""
