@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/common-sense
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/common-sense/ChangeLog,v 1.23 2012/05/21 09:42:29 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/common-sense/ChangeLog,v 1.24 2012/06/21 18:41:36 tove Exp $
+
+*common-sense-3.600.0 (21 Jun 2012)
+
+  21 Jun 2012; Torsten Veller <tove@gentoo.org> +common-sense-3.600.0.ebuild:
+  Version bump
 
   21 May 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   common-sense-3.500.0.ebuild:
