@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Term-ReadLine-Gnu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Term-ReadLine-Gnu/ChangeLog,v 1.22 2012/02/18 08:54:36 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Term-ReadLine-Gnu/ChangeLog,v 1.23 2012/06/21 19:32:13 ago Exp $
+
+  21 Jun 2012; Agostino Sarubbo <ago@gentoo.org>
+  Term-ReadLine-Gnu-1.200.0-r1.ebuild:
+  Stable for amd64, wrt bug #422849
 
   18 Feb 2012; Torsten Veller <tove@gentoo.org>
   -Term-ReadLine-Gnu-1.200.0.ebuild:
